2009-12-17  Justin Schuh  <jschuh@chromium.org>

        Reviewed by Dan Bernstein.

        Bug 32357: SVG test case crashes WebKit (invalid font URL)
        https://bugs.webkit.org/show_bug.cgi?id=32357

        Added check for NULL return value from DocLoader::requestFont()

        * svg/text/text-font-uri-invalid-expected.txt: Added.
        * svg/text/text-font-uri-invalid.svg: Added.

2009-12-17  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Dan Bernstein.

        marquee with display:inline causes crash
        https://bugs.webkit.org/show_bug.cgi?id=32374

        * fast/inline/inline-marquee-crash-expected.txt: Added.
        * fast/inline/inline-marquee-crash.html: Added.

2009-12-17  Fumitoshi Ukai  <ukai@chromium.org>

        Unreviewed. Unskip websocket tests

        New pywebsocket (0.4.5) landed at WebKit r52296, so
        sub-protocol-with-space.html should pass.

        * platform/mac/Skipped: delete websocket/tests/sub-protocol-with-space.html
        * platform/win/Skipped: delete websocket/tests/sub-protocol-with-space.html

2009-12-17  Pavel Feldman  <pfeldman@dhcp-172-28-174-220.spb.corp.google.com>

        Reviewed by Timothy Hatcher.

        Web Inspector: Incorrect Doctype.

        REGRESSION(4.0.4-TOT):Web Inspector: Incorrect Doctype
        https://bugs.webkit.org/show_bug.cgi?id=32671

        * inspector/elements-panel-structure-expected.txt:
        * inspector/elements-panel-structure.html:

2009-12-17  Chris Fleizach  <cfleizach@apple.com>

        Unreviewed layout test fix.

        WAI-ARIA: implement treegrid
        https://bugs.webkit.org/show_bug.cgi?id=31299

        The test for this patch shouldn't be run on Tiger.

        * platform/mac-tiger/Skipped:

2009-12-07  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Add controls for playing html5 video.
        https://bugs.webkit.org/show_bug.cgi?id=26304
