@@ -1,0 +1,10 @@
+CONSOLE MESSAGE: line 1: Unsafe JavaScript attempt to access frame with URL http://localhost:8000/security/resources/localPage.html from frame with URL http://127.0.0.1:8000/security/xss-DENIED-assign-location-href-javascript.html. Domains, protocols and ports must match.
+
+CONSOLE MESSAGE: line 1: Unsafe JavaScript attempt to access frame with URL http://localhost:8000/security/resources/localPage.html from frame with URL http://127.0.0.1:8000/security/xss-DENIED-assign-location-href-javascript.html. Domains, protocols and ports must match.
+
+
+
+--------
+Frame: '<!--framePath //<!--frame0-->-->'
+--------
+You can see the contents of this file.
