@@ -1,3 +1,13 @@
+2009-12-17  Dirk Pranke  <dpranke@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        Upstreaming an XSS test from chromium.org.
+        https://bugs.webkit.org/show_bug.cgi?id=32685
+
+        * http/tests/security/xss-DENIED-assign-location-href-javascript-expected.txt: Added.
+        * http/tests/security/xss-DENIED-assign-location-href-javascript.html: Added.
+
 2009-12-17  Justin Schuh  <jschuh@chromium.org>
 
         Reviewed by Dan Bernstein.
